fixed spacing for tiny heart and top margin on business#show jobs#show

--- a/tably/app/assets/stylesheets/business.scss
+++ b/tably/app/assets/stylesheets/business.scss
@@ -12,6 +12,14 @@ h1 {
 	 width: 10em;
 }
 
+.empty-employee-div h1{
+	font-size: 30px;
+	display: block;
+	width: 100%;
+	height: 180px;
+	opacity: .4;
+}
+
 .user-photo{
 	height: 100px;
 	width: 100px;
@@ -94,6 +102,7 @@ p {
 	background-repeat: none;
 	background-size: cover;
 	position: relative;
+	margin: 20px;
 }
 
 .business-info{
